--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>帳號註冊申請</title>
+  <meta charset="UTF-8">
+  <title>考古題申請表單</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
+      margin: 30px;
     }
     label {
       display: block;
       margin-top: 15px;
-      font-weight: bold;
     }
-    input[type="text"], input[type="password"] {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-    }
-    .school {
+    .school-item {
       display: flex;
       align-items: center;
-      gap: 10px;
-      margin: 5px 0;
+      margin-top: 5px;
     }
-    .total {
+    .school-item input {
+      margin-right: 8px;
+    }
+    #total {
+      margin-top: 20px;
+      font-size: 18px;
       font-weight: bold;
-      margin-top: 10px;
+      color: green;
     }
     button {
       margin-top: 20px;
@@ -39,77 +34,80 @@
   </style>
 </head>
 <body>
-  <h2>帳號註冊申請表單</h2>
+  <h2>📄 請填寫申請資訊</h2>
 
-  <form id="registerForm">
-    <label>真實姓名：
-      <input type="text" id="realName" required />
-    </label>
+  <label>真實姓名：<input type="text" id="realName"></label>
+  <label>FB 姓名（聯絡用）：<input type="text" id="fbName"></label>
+  <label>銀行帳號後五碼：<input type="text" id="bankCode"></label>
+  <label>申請帳號：<input type="text" id="account"></label>
+  <label>申請密碼：<input type="password" id="password"></label>
 
-    <label>FB 姓名（聯絡用）：
-      <input type="text" id="fbName" required />
-    </label>
+  <h3>📚 勾選欲購買的學校：</h3>
+  <div class="school-item"><input type="checkbox" class="school" value="台大" data-price="600">台大（103~114單操輸送/化熱化反/工程數學）</div>
+  <div class="school-item"><input type="checkbox" class="school" value="清大" data-price="700">清大（103~114單操輸送/化熱化反）</div>
+  <div class="school-item"><input type="checkbox" class="school" value="成大" data-price="700">成大（103~114單操輸送/化熱/化反）</div>
+  <div class="school-item"><input type="checkbox" class="school" value="中央" data-price="550">中央（103~114單操輸送/化熱化反）</div>
+  <div class="school-item"><input type="checkbox" class="school" value="台科大" data-price="550">台科大（103~114單操輸送/化熱化反/工程數學）</div>
+  <div class="school-item"><input type="checkbox" class="school" value="中興" data-price="550">中興（104~114單操輸送/化熱化反/工程數學）</div>
 
-    <label>銀行帳號後五碼：
-      <input type="text" id="bankCode" maxlength="5" required />
-    </label>
+  <div id="total">💰 總金額：0 元</div>
 
-    <label>欲購買學校（每間 100 元）：</label>
-    <div class="school"><input type="checkbox" value="台大" /> 台大</div>
-    <div class="school"><input type="checkbox" value="清大" /> 清大</div>
-    <div class="school"><input type="checkbox" value="成大" /> 成大</div>
-    <div class="school"><input type="checkbox" value="中央" /> 中央</div>
-    <div class="school"><input type="checkbox" value="台科大" /> 台科大</div>
-    <div class="school"><input type="checkbox" value="中興" /> 中興</div>
-
-    <div class="total">總金額：<span id="total">0</span> 元</div>
-
-    <label>申請帳號：
-      <input type="text" id="username" required />
-    </label>
-
-    <label>申請密碼：
-      <input type="password" id="password" required />
-    </label>
-
-    <button type="submit">送出申請</button>
-  </form>
+  <button onclick="submitForm()">送出申請</button>
 
   <script>
-    const checkboxes = document.querySelectorAll('input[type="checkbox"]');
-    const totalDisplay = document.getElementById("total");
+    const schoolCheckboxes = document.querySelectorAll('.school');
+    const totalDisplay = document.getElementById('total');
 
-    checkboxes.forEach(cb => {
-      cb.addEventListener("change", () => {
-        const total = Array.from(checkboxes).filter(cb => cb.checked).length * 100;
-        totalDisplay.innerText = total;
-      });
+    schoolCheckboxes.forEach(box => {
+      box.addEventListener('change', calculateTotal);
     });
 
-    document.getElementById("registerForm").addEventListener("submit", (e) => {
-      e.preventDefault();
+    function calculateTotal() {
+      let total = 0;
+      let count = 0;
+      schoolCheckboxes.forEach(box => {
+        if (box.checked) {
+          total += parseInt(box.dataset.price);
+          count++;
+        }
+      });
 
-      const selectedSchools = Array.from(checkboxes)
-        .filter(cb => cb.checked)
-        .map(cb => cb.value);
+      let discount = 0;
+      if (count === 2) discount = 100;
+      else if (count === 3) discount = 200;
+      else if (count === 4) discount = 350;
+      else if (count === 5) discount = 500;
+      else if (count === 6) discount = 800;
 
-      const formData = {
-        realName: document.getElementById("realName").value.trim(),
-        fbName: document.getElementById("fbName").value.trim(),
-        bankCode: document.getElementById("bankCode").value.trim(),
-        username: document.getElementById("username").value.trim(),
-        password: document.getElementById("password").value.trim(),
-        purchased: selectedSchools,
-        total: selectedSchools.length * 100
+      totalDisplay.innerText = `💰 總金額：${total - discount} 元`;
+    }
+
+    function submitForm() {
+      const account = document.getElementById("account").value.trim();
+      const password = document.getElementById("password").value.trim();
+      if (!account || !password) {
+        alert("請輸入帳號與密碼！");
+        return;
+      }
+
+      const purchased = {};
+      schoolCheckboxes.forEach(box => {
+        if (box.checked) {
+          purchased[box.value] = true;
+        }
+      });
+
+      const data = {
+        username: account,
+        password,
+        purchased,
+        isLoggedIn: false,
+        sessionToken: ""
       };
 
-      // 暫時模擬送出：實際上可以改成 fetch 呼叫 Cloud Function
-      console.log("📩 表單送出：", formData);
-      alert("✅ 資料已送出，我們將盡快審核！");
-
-      document.getElementById("registerForm").reset();
-      totalDisplay.innerText = "0";
-    });
+      console.log("✅ 準備送出至 Firebase：", data);
+      alert("模擬送出成功（實際串接 Firebase 請自行加入 fetch 程式碼）");
+    }
   </script>
 </body>
 </html>
