--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       };
 
       try {
-        const res = await fetch("https://submitsignuprequest-vsmwel6dmq-uc.a.run.app", { // TODO: 替換成實際部署 URL
+        const res = await fetch("https://us-central1-chesolutionsignup.cloudfunctions.net/submitSignupRequest", { // TODO: 替換成實際部署 URL
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(payload)
