--- a/index.html
+++ b/index.html
@@ -1,45 +1,158 @@
-const functions = require("firebase-functions");
-const admin = require("firebase-admin");
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>註冊頁面</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 30px auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+    h2 {
+      text-align: center;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+    }
+    input[type="text"], input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      box-sizing: border-box;
+    }
+    .school-option {
+      display: flex;
+      justify-content: space-between;
+      padding: 5px 0;
+    }
+    .school-option label {
+      margin: 0;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 15px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    #result {
+      margin-top: 20px;
+      font-weight: bold;
+      color: green;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <h2>註冊系統</h2>
+  <label>真實姓名：<input type="text" id="realName" required></label>
+  <label>Facebook姓名與網址：<input type="text" id="fbName" required></label>
+  <label>銀行帳號後五碼：<input type="text" id="bankLast5" required></label>
 
-admin.initializeApp();
-const db = admin.database();
+  <h3>欲購買的間數：</h3>
+  <div id="schools"></div>
 
-exports.submitSignupRequest = functions.https.onRequest((req, res) => {
-  const origin = req.headers.origin;
+  <p><strong>總金額：<span id="total">0</span> 元</strong></p>
 
-  if (origin === "https://woodyhu9512.github.io") {
-    res.set("Access-Control-Allow-Origin", origin);
-    res.set("Vary", "Origin");
-  }
+  <label>申請帳號：<input type="text" id="username" required></label>
+  <label>申請密碼：<input type="password" id="password" required></label>
 
-  res.set("Access-Control-Allow-Methods", "POST, OPTIONS");
-  res.set("Access-Control-Allow-Headers", "Content-Type");
-  res.set("Access-Control-Allow-Credentials", "true");
+  <button onclick="submitForm()">送出申請</button>
+  <button onclick="clearForm()">清空所有欄位</button>
+  <div id="result"></div>
 
-  if (req.method === "OPTIONS") {
-    return res.status(204).send("");
-  }
+  <script>
+    const schoolPrices = {
+      "台大": 600,
+      "清大": 700,
+      "成大": 700,
+      "中央": 550,
+      "台科大": 550,
+      "中興": 550
+    };
 
-  const { realName, fbName, bankLast5, username, password, selectedSchools, totalPrice } = req.body;
+    const discount = [0, 0, 100, 200, 350, 500, 800];
+    const schoolDiv = document.getElementById("schools");
+    const totalDisplay = document.getElementById("total");
 
-  if (!realName || !fbName || !bankLast5 || !username || !password || !selectedSchools || totalPrice === undefined) {
-    return res.status(400).json({ error: "❌ 缺少欄位資料" });
-  }
+    for (const [school, price] of Object.entries(schoolPrices)) {
+      const div = document.createElement("div");
+      div.className = "school-option";
+      div.innerHTML = `
+        <label><input type="checkbox" value="${school}" onchange="updateTotal()"> ${school}（${price} 元）</label>
+      `;
+      schoolDiv.appendChild(div);
+    }
 
-  const timestamp = Date.now();
-  db.ref(`pendingUsers/${username}_${timestamp}`).set({
-    "真實姓名": realName,
-    "Facebook資訊": fbName,
-    "銀行帳號後五碼": bankLast5,
-    "申請帳號": username,
-    "申請密碼": password,
-    "選擇學校": selectedSchools,
-    "總金額": totalPrice,
-    "送出時間": new Date().toLocaleString("zh-TW", { timeZone: "Asia/Taipei" })
-  }).then(() => {
-    return res.status(200).json({ success: true, message: "✅ 已送出申請，請等待審核" });
-  }).catch(err => {
-    console.error("❌ 儲存失敗：", err);
-    return res.status(500).json({ error: "伺服器錯誤" });
-  });
-});
+    function updateTotal() {
+      const checkboxes = document.querySelectorAll("#schools input[type=checkbox]:checked");
+      let sum = 0;
+      checkboxes.forEach(cb => {
+        sum += schoolPrices[cb.value];
+      });
+      const d = discount[checkboxes.length] || 0;
+      totalDisplay.innerText = sum - d;
+    }
+
+    function clearForm() {
+      document.getElementById("realName").value = "";
+      document.getElementById("fbName").value = "";
+      document.getElementById("bankLast5").value = "";
+      document.getElementById("username").value = "";
+      document.getElementById("password").value = "";
+      document.querySelectorAll("#schools input[type=checkbox]").forEach(cb => cb.checked = false);
+      updateTotal();
+      document.getElementById("result").innerText = "";
+    }
+
+    async function submitForm() {
+      const realName = document.getElementById("realName").value.trim();
+      const fbName = document.getElementById("fbName").value.trim();
+      const bankLast5 = document.getElementById("bankLast5").value.trim();
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const selectedSchools = Array.from(document.querySelectorAll("#schools input[type=checkbox]:checked")).map(cb => cb.value);
+      const totalPrice = parseInt(document.getElementById("total").innerText);
+
+      if (!realName || !fbName || !bankLast5 || !username || !password || selectedSchools.length === 0) {
+        alert("❌ 請填寫所有欄位並至少勾選一所學校！");
+        return;
+      }
+
+      const payload = {
+        realName,
+        fbName,
+        bankLast5,
+        username,
+        password,
+        selectedSchools,
+        totalPrice
+      };
+
+      try {
+        const res = await fetch(" https://us-central1-chesolutionsignup.cloudfunctions.net/submitSignupRequest", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        });
+
+        const data = await res.json();
+        if (data.success) {
+          document.getElementById("result").innerText = "✅ 送出成功，請等待審核！";
+          clearForm();
+        } else {
+          document.getElementById("result").innerText = "❌ 發生錯誤：" + (data.error || "請稍後再試");
+        }
+      } catch (err) {
+        console.error(err);
+        document.getElementById("result").innerText = "🚨 無法連線，請稍後再試。";
+      }
+    }
+  </script>
+</body>
+</html>
