--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>註冊頁面</title>
+  <title>化工製造所註冊、付款登記頁面</title>
   <style>
     body {
       font-family: Arial, sans-serif;
