--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <h2>註冊系統</h2>
+  <h2>化工製造所註冊與付費登記系統</h2>
   <label>真實姓名：<input type="text" id="realName" required></label>
   <label>Facebook姓名與網址：<input type="text" id="fbName" required></label>
   <label>銀行帳號後五碼：<input type="text" id="bankLast5" required></label>
